# Quick-Explorer

./: .gitignore  CHANGELOG.md  LATEST_RELEASE_BODY.md  README.md  build_logs.txt  changelog_2026_01_26.html  changelog_2026_01_29.html  changelog_2026_01_29.md  check_names.ps1  debug_verbs.ps1  index.html  package-lock.json  package.json  release_notes.md  tailwind.config.js  tauri_logs.txt  test_output.txt  test_restore.ps1  v0.1.26_App.tsx  v0.1.26_FileGrid.tsx  v0.1.26_FileTable.tsx
.agent/: archive_knowledge.md  dnd_knowledge.md  fix_7z_progress_atomic.md  plan_byte_based_extraction_progress.md  plan_manual_7z_stream_progress.md  plan_native_archive_extraction.md  plan_native_progress_indicator.md  plan_ole_drag_drop_upgrade.md  plan_path_recovery_clipboard.md  plan_plugin_hybrid_dnd.md  thumbnail_loading_policy.md
.agent/workflows/: release-app.md  release-github.md  release-manual.md
.github/workflows/: release.yml  test.yml  winget.yml
crates/drag/: Cargo.toml
scripts/: generate_changelog.cjs
src/: App.css  App.test.tsx  App.tsx  Layout.test.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build_errors.txt  build_errors_058.txt  check.json  check_out.txt  check_out_2.txt  check_out_3.txt  check_out_4.txt  tauri.conf.json  test_output.txt  test_t.rs
src-tauri/bindings/: ClipboardInfo.ts  DiskInfo.ts  FolderSizeUpdate.ts  ListFilesResult.ts  SearchMatch.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: arquitectura_foco_sincronica_v9.md  arquitectura_sincronizacion_handshake_v11.md  commands.rs  drop_overlay.rs  extraction.rs  lib.rs  main.rs  sta_worker.rs  test_traits.rs
src-tauri/src/search_engine/: art_core.rs  index_manager.rs  mod.rs
src/bindings/: DiskInfo.ts  (+2 more)
(+44 files in other folders)
