[package]
name = "d-speedexplorer"
version = "0.1.12"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "d_speedexplorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
windows = { version = "0.61", features = ["Win32_UI_Shell", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com_StructuredStorage", "Win32_Foundation", "Win32_System_Com", "Win32_System_Registry", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_UI_Controls", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Ole"] }
windows-core = "0.61"
windows-implement = "0.60"
window-vibrancy = "0.7.1"
clipboard-win = "5.3"
lru = "0.12"
tokio = { version = "1", features = ["process", "io-util"] }
image = { version = "0.25", features = ["png", "jpeg"] }
rayon = "1.10"
tauri-plugin-drag = "2"
log = "0.4"
simplelog = "0.12"
backtrace = "0.3"
zip = "2"
sevenz-rust = "0.6"

